# flam-drum-machine

./: .gitignore  ARCHITECTURE.md  BUILD.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  Integration_Guide_PerChannelMixer.md  Makefile  PerChannelMixerTodo.md  README.md  VISION.md  shell.nix
.github/workflows/: ci.yml  pages.yml  release.yml
FeatureDocs/: DistributedRepositories.md  FlamForge.md  FlamKitFormat.md  HybridStreaming.md  PerChannelMixer.md  VelocityMapping.md
FeaturePlans/: PerChannelMixerPlan.md
FeatureSpecs/: EffectsChain.md  PerChannelMixer.md
L1Tests/: CMakeLists.txt  CaptureEngineTest.cpp  DSPTest.cpp  OfflineTransientDetectorTest.cpp  VoiceManagerTest.cpp
L1Tests/Fixtures/: generate_fixtures.py
L1Tests/Fixtures/golden-kit/: flamkit.yaml
Resources/Kits/: ExampleKit.flamkit  LICENSES.md  README.md  example-kit.flamkit
Resources/Kits/drs-kit/: DRSKit_basic.xml  DRSKit_full.xml  DRSKit_minimal.xml  DRSKit_no_whiskers.xml  DRSKit_whiskers_only.xml  LICENSE.txt  Midimap_basic.xml  Midimap_full.xml  Midimap_minimal.xml  Midimap_no_whiskers.xml  Midimap_whiskers_only.xml  README.md  flamkit-lite.yaml  flamkit.yaml
Resources/Kits/drs-kit/Crash_left_shank/: Crash_left_shank.xml
Resources/Kits/drs-kit/Crash_left_tip/: Crash_left_tip.xml
Resources/Kits/drs-kit/Crash_left_whisker/: Crash_left_whisker.xml
Resources/Kits/drs-kit/Crash_right_shank/: Crash_right_shank.xml
Resources/Kits/drs-kit/Crash_right_tip/: Crash_right_tip.xml
Resources/Kits/drs-kit/Crash_right_whisker/: Crash_right_whisker.xml
Resources/Kits/drs-kit/Hihat_closed/: Hihat_closed.xml
Resources/Kits/drs-kit/Hihat_closed_shank/: Hihat_closed_shank.xml
Resources/Kits/drs-kit/Hihat_closed_whisker/: Hihat_closed_whisker.xml
Resources/Kits/drs-kit/Hihat_foot/: Hihat_foot.xml
Resources/Kits/drs-kit/Hihat_open/: Hihat_open.xml
Resources/Kits/drs-kit/Hihat_open_tip/: Hihat_open_tip.xml
Resources/Kits/drs-kit/Hihat_open_whisker/: Hihat_open_whisker.xml
Resources/Kits/drs-kit/Hihat_semi_open/: Hihat_semi_open.xml
Resources/Kits/drs-kit/Kdrum_with_contact/: Kdrum_with_contact.xml
Resources/Kits/drs-kit/Kdrum_without_contact/: Kdrum_without_contact.xml
Resources/Kits/drs-kit/Ride_rest/: Ride_rest.xml
Resources/Kits/drs-kit/Ride_shank/: Ride_shank.xml
Resources/Kits/drs-kit/Ride_shank_bell/: Ride_shank_bell.xml
Resources/Kits/drs-kit/Ride_tip/: Ride_tip.xml
Resources/Kits/drs-kit/Ride_tip_bell/: Ride_tip_bell.xml
Resources/Kits/drs-kit/Ride_tip_bell_chain/: Ride_tip_bell_chain.xml
Resources/Kits/drs-kit/Ride_tip_chain/: Ride_tip_chain.xml
Resources/Kits/drs-kit/Ride_whisker/: Ride_whisker.xml
Resources/Kits/drs-kit/Snare/: Snare.xml
Resources/Kits/drs-kit/Snare_circle_whisker/: Snare_circle_whisker.xml
Resources/Kits/drs-kit/Snare_rest/: Snare_rest.xml
Resources/Kits/drs-kit/Snare_rim/: Snare_rim.xml
Resources/Kits/drs-kit/Snare_whisker/: Snare_whisker.xml
Resources/Kits/drs-kit/Tom1/: Tom1.xml
Resources/Kits/drs-kit/Tom1_whisker/: Tom1_whisker.xml
Resources/Kits/drs-kit/Tom2/: Tom2.xml
Resources/Kits/drs-kit/Tom2_whisker/: Tom2_whisker.xml
Resources/Kits/drs-kit/Tom3/: Tom3.xml
Resources/Kits/drs-kit/Tom3_whisker/: Tom3_whisker.xml
Resources/Kits/example-kit/: flamkit.yaml
Resources/Kits/minimal-kit/: flamkit.yaml
Resources/Kits/muldjord-kit/: LICENSE.txt  MuldjordKit-FreePats-20201018.sfz  README.md  flamkit.yaml
Source/CLI/: FlamRender.cpp
Source/Core/: FlamEngine.cpp  FlamEngine.h  Mixer.cpp  Mixer.h  MixerBus.cpp  MixerBus.h  PerChannelMixer.cpp  PerChannelMixer.h  SampleLoader.cpp  SampleLoader.h  SampleStreamingManager.cpp  SampleStreamingManager.h  SampleVoice.cpp  SampleVoice.h  VoiceManager.cpp  VoiceManager.h
Source/DSP/: CompressorProcessor.cpp  CompressorProcessor.h  IRConvolver.cpp  IRConvolver.h  LimiterProcessor.cpp  LimiterProcessor.h  SaturationProcessor.cpp  SaturationProcessor.h  SimpleCompressor.h  SimpleEQ.h  TenBandGraphicEQ.cpp  TenBandGraphicEQ.h
Source/FlamForge/: CaptureEngine.cpp  CaptureEngine.h  CaptureTypes.h  ForgeColors.h  KitExporter.cpp  KitExporter.h  LayerSynth.cpp  LayerSynth.h  Main.cpp  MainComponent.h  OfflineTransientDetector.cpp  OfflineTransientDetector.h  SegmentExtractor.cpp  SegmentExtractor.h  SegmentPlayer.h  WaveformEditor.cpp  WaveformEditor.h
Source/Formats/: FlamKitLoader.cpp  FlamKitLoader.h
Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StandaloneApp.cpp
Source/Repository/: KitIndexEntry.h  RepositoryManager.cpp  RepositoryManager.h
Source/UI/: ChannelStripComponent.h  CompressorEditorComponent.h  EQEditorComponent.h  FXButtonComponent.h  FlamLookAndFeel.h  LevelMeter.h  LimiterEditorComponent.h  MasterChannelStripComponent.h  MixerPanel.h  PeakMeter.h  PerChannelMixerPanel.h  RepoSourcesComponent.h  RotaryKnob.h  SaturationEditorComponent.h  VerticalFader.h
Tests/: CMakeLists.txt  DSPTest.cpp  FlamKitLoaderTest.cpp  L1Main.cpp  VoiceManagerTest.cpp
Tests/Fixtures/: generate_golden.py
Tests/Fixtures/goldens/: golden_render.f32
cmake/: FetchPluginval.cmake
docs/: GAP_ANALYSIS.md  testing.md
repo/: index.json
scripts/: pluginval-linux-launch.sh  run-pluginval.sh  run-sanitized-tests.sh
tests/: CMakeLists.txt  GoldenRenderTest.cpp  determinism_test.cpp  smoke_test.cpp
tests/fixtures/: smoke_seq.json
tools/: flamkit_convert.py  requirements.txt
website/: 404.html  README.md  community.html  docs.html  download.html  index.html  license.html  roadmap.html  robots.txt  samples.html  sitemap.xml  styles.css
